inclusao dos botoes solicitados em vendas

--- a/src/app/sistema/estoque/fornecedores/view-fornecedor/view-fornecedor.component.html
+++ b/src/app/sistema/estoque/fornecedores/view-fornecedor/view-fornecedor.component.html
@@ -263,7 +263,7 @@
 
                             <ng-container *ngFor="let condicao of condicoesPagamento">
                                 <div class="form-check form-check-inline px-4">
-                                    <input check disabled class="form-check-input shadow-sm" type="checkbox" />
+                                    <input checked disabled class="form-check-input shadow-sm" type="checkbox" />
                                     <label class="form-check-label">{{ condicao?.nome }}</label>
                                 </div>
                             </ng-container>
