--- a/src/app/sistema/vendas/editar-clientes/editar-clientes.component.html
+++ b/src/app/sistema/vendas/editar-clientes/editar-clientes.component.html
@@ -302,7 +302,7 @@
 
                         <!-- Nome do vendedor -->
                         <div class="col-9 px-2 pt-4 p-0 m-0 form-floating">
-                            <select formControlName="nomeVendedor" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do vendedor" formControlName="vendedor">
+                            <select formControlName="vendedor" class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do vendedor" formControlName="vendedor">
                 <option *ngFor="let vendedor of vendedores" value="{{vendedor.name}} {{vendedor.surname}}">
                   {{vendedor.name}} {{vendedor.surname}}
                 </option>
