--- a/src/app/sistema/vendas/pedidos-vendas/visualizar-pedido/visualizar-pedido.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/visualizar-pedido/visualizar-pedido.component.html
@@ -115,9 +115,6 @@
                                     <div class="col-6">
                                         Valor de entrega: {{ pedidosForm.value.valorFreteEntrega }}
                                     </div>
-                                    <div class="col-6">
-                                        Meio de pagamento: {{ pedidosForm.value.meioPagamento }}
-                                    </div>
                                     <div class="col-6">Dias: {{ pedidosForm.value.dias }}</div>
                                     <div class="col-6">
                                         Data de vencimento: {{ pedidosForm.value.dataVencimento | date }}
@@ -498,56 +495,25 @@
 
         <!-- Condições de pagamento -->
         <div class="row mt-4">
-          <div class="col-12 mt-4 pb-4 border-bottom">
+          <div class="row m-0 p-0">
             <h4 class="m-0 text-custom-dark">Condições de pagamento</h4>
-          </div>
+            <ng-container *ngFor="let condicao of condicoesPagamento">
+                <div class="col-12 mt-2 form-check form-check-inline px-4">
+                    <input class="form-check-input shadow-sm" type="checkbox" checked disabled />
+                    <label class="form-check-label">{{
+                condicao?.nome
+              }}</label>
+                    </div>
+                    </ng-container>
+                </div>
 
-          <!-- Condição de pagamento -->
-          <div class="col-6 p-0 m-0">
-            <div class="pt-4 px-2 form-floating">
-              <input
-                class="form-control form-control-sm"
-                type="text"
-                #condicao
-                formControlName="condPagamento"
-                (keyup)="changeDesconto(this.item.value)"
-                readonly
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Selecione a condição de pagamento</label
-              >
-            </div>
 
-            <div
-              *ngIf="condicao.value === 'personalizado'"
-              class="pt-4 px-2 form-floating"
-            >
-              <input
-                class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm"
-                type="text"
-                placeholder="Condição personalizada"
-                formControlName="pagPersonalizado"
-                readonly
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Condição personalizada</label
-              >
-            </div>
-          </div>
 
-          <!-- Tabela de preço -->
-          <div class="col-6 p-0 m-0">
-            <div class="pt-4 px-2 form-floating">
-              <input
-                class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm"
-                type="text"
-                #tabela
-                placeholder="Condição personalizada"
-                formControlName="tabPreco"
-                readonly
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Tabela de preço aplicada</label
+                <!-- Tabela de preço -->
+                <div class="col-6 p-0 m-0">
+                    <div class="pt-4 px-2 form-floating">
+                        <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" #tabela placeholder="Condição personalizada" formControlName="tabPreco" readonly />
+                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tabela de preço aplicada</label
               >
             </div>
 
@@ -568,19 +534,6 @@
             </div>
           </div>
 
-          <!-- Meio de pagamento -->
-          <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-            <input
-              class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm"
-              type="text"
-              placeholder="Condição personalizada"
-              formControlName="meioPagamento"
-              readonly
-            />
-            <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-              >Meio de pagamento</label
-            >
-          </div>
 
           <!-- Dias -->
           <div class="col-1 px-2 pt-4 p-0 m-0 form-floating">
