botão para envio de proposta recusada incluido

--- a/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
+++ b/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
@@ -67,7 +67,7 @@
             <p>{{ pedido?.id }}</p>
           </div>
           <div class="col-2">
-            <p>{{ pedido?.data }}</p>
+            <p>{{ pedido?.data | date }}</p>
           </div>
           <div class="col-2">
             <p>{{ pedido?.fornecedor }}</p>
