--- a/src/app/sistema/vendas/vendas.component.scss
+++ b/src/app/sistema/vendas/vendas.component.scss
@@ -1,17 +1,20 @@
 @import "../../../_variables.scss";
-
 .nav-link.active {
-  background: transparent;
-  font-weight: normal;
-  &:hover {
-    background-color: transparent;
-  }
+    background: transparent;
+    font-weight: normal;
+    &:hover {
+        background-color: transparent;
+    }
 }
 
 .nav-link {
-  background-color: $custom-dark;
-  color: $custom-light;
-  &:hover {
-    background-color: #464646;
-  }
+    background-color: $custom-dark;
+    color: $custom-light;
+    &:hover {
+        background-color: #464646;
+    }
+}
+
+.drivers-list {
+    background: #f0f0f0;
 }
