--- a/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
+++ b/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
@@ -46,9 +46,9 @@
       placeholder="Pesquisar"
     />
     <a
-      class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark"
+      class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark" style="margin-top: 13px;"
     >
-      <i class="bi-search"></i>
+      <i class="bi-search" style="margin-right: -10px;"></i>
     </a>
   </div>
 </div>
