--- a/src/app/sistema/notificacoes/nova-msg/nova-msg.component.html
+++ b/src/app/sistema/notificacoes/nova-msg/nova-msg.component.html
@@ -74,7 +74,7 @@
 
                             <!-- Salvar -->
                             <div class="col-3 px-2 p-0 m-0 d-grid">
-                                <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start" (click)="submit()">
+                                <button class="btn-close" #close data-bs-dismiss="modal" type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start" (click)="submit()">
                 <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">
                   Enviar
                 </h5>
