--- a/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
+++ b/src/app/sistema/compras/pedidos-compras/filtrar-pedido/filtrar-pedido.component.html
@@ -57,6 +57,9 @@
           <div class="col-2">
             <h5 class="fw-bold text-truncate">Status</h5>
           </div>
+          <div class="col-2">
+            <h5 class="fw-bold text-truncate d-none">Ações</h5>
+          </div>
         </div>
         <!-- Tabela -->
         <div
